force-app/main/default/objects/Journal_Entry__c/fields/CRM_Created_By_NAV_Unit__c.field-meta.xml
<CustomField>
    <fullName>CRM_Created_By_NAV_Unit__c</fullName>
    <description>NAV unit number of the user creating the journal entry.</description>
    <externalId>true</externalId>
    <label>Created By NAV Unit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>