force-app/main/default/objects/Journal_Entry__c/fields/CRM_NAV_Case_Legacy_System__c.field-meta.xml
<CustomField>
    <fullName>CRM_NAV_Case_Legacy_System__c</fullName>
    <description>If case type = FAGSAK, this defines which legacy system that handles the case. Required for journal purposes using Dokarkiv API</description>
    <label>NAV Case Legacy System</label>
    <length>64</length>
    <type>Text</type>
</CustomField>