force-app/main/default/objects/Journal_Entry__c/fields/CRM_Thread__c.field-meta.xml
<CustomField>
    <fullName>CRM_Thread__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a thread if the journal entry is related to this.</description>
    <label>Thread</label>
    <referenceTo>Thread__c</referenceTo>
    <relationshipLabel>Journal Entries</relationshipLabel>
    <relationshipName>Journal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>