force-app/main/default/objects/Journal_Entry__c/fields/Journal_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry_ID__c</fullName>
    <description>Unique identifier to a JOARK journal post.</description>
    <externalId>true</externalId>
    <label>Journal Entry ID</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>