force-app/main/default/objects/Journal_Entry__c/fields/Journal_Entry_Status__c.field-meta.xml
<CustomField>
    <fullName>Journal_Entry_Status__c</fullName>
    <description>Status of the journal entry submission to JOARK</description>
    <label>Journal Entry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>