force-app/main/default/objects/Journal_Entry__c/fields/Subtheme__c.field-meta.xml
<CustomField>
    <fullName>Subtheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation to common code for the subtheme the journal entry was given.</description>
    <label>Subtheme</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Common_Code__c.CRM_Code_Set__c</field>
            <operation>equals</operation>
            <value>Behandlingstema</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Common_Code__c</referenceTo>
    <relationshipLabel>Journal Entries (Subtheme)</relationshipLabel>
    <relationshipName>Journal_Entries_Subtheme</relationshipName>
    <type>Lookup</type>
</CustomField>